<resources>
    <string name="imagepicker_multiselect_done">Done</string>
    <string name="imagepicker_multiselect_not_enough_singular">You have to select 1 more image</string>
    <string name="imagepicker_multiselect_not_enough_plural">You have to select %d more images</string>
    <string name="imagepicker_multiselect_enough_singular">You have selected 1 image</string>
    <string name="imagepicker_multiselect_enough_plural">You have selected %d images</string>
    <string name="imagepicker_multiselect_overselect">You cannot select more than %d images</string>
    <string name="imagepicker_gallery_intent_title">Select Multiple Images</string>
    <string name="imagepicker_no_image_text_view">There are no image in your device.</string>
    <string name="font_calibri_regular">n-calibri.ttf</string>
    <string name="title">Title</string>
    <string name="todo">TODO</string>
    <string name="locationName">Location Name</string>
    <string name="_allPhoto">All Photos</string>
    <string name="next">NEXT</string>
    <string name="_choosePhotoTxt">Choose up to 10 photos</string>
    <string name="_minimumPhotoTxt">Minimum of 2 Photos</string>
    <string name="addDishPhoto">Add Dish Photos</string>
    <string name="newPhoto">New Photo</string>
</resources>
