<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppTheme"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="60dp"-->
<!--        android:id="@+id/toolmenu"-->
<!--        >-->

<!--        <ImageButton-->
<!--            android:id="@+id/closewindow"-->
<!--            android:layout_width="25dp"-->
<!--            android:layout_height="25dp"-->
<!--            android:src="@drawable/iconslightclose"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:background="@android:color/white"-->
<!--            android:layout_centerVertical="true"/>-->

<!--        <com.asksira.bsimagepicker.cTextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textSize="24sp"-->
<!--            android:fontFamily="@string/font_calibri_regular"-->
<!--            android:textColor="#454F63"-->
<!--            android:text="Social"-->
<!--            android:layout_centerInParent="true"/>-->

<!--        <com.asksira.bsimagepicker.cTextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Add"-->
<!--            android:id="@+id/addbutton"-->
<!--            android:textColor="#42C1FC"-->
<!--            android:textSize="16sp"-->
<!--            android:fontFamily="@string/font_calibri_regular"-->
<!--            android:background="@drawable/smallbtnbg"-->
<!--            android:layout_marginRight="20dp"-->
<!--            android:layout_alignParentRight="true"-->
<!--            android:layout_centerVertical="true"/>-->

<!--    </RelativeLayout>-->
    <RelativeLayout
        android:visibility="visible"
        android:id="@+id/toolbarPageIcon"
        android:paddingStart="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@color/_FFFFFF"
        android:paddingLeft="@dimen/_10sdp">

        <com.asksira.bsimagepicker.cTextView
            android:visibility="visible"
            android:id="@+id/titleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/_24ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/cabin_semibold"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:visibility="visible"
            android:id="@+id/closeImgBtn"
            android:background="@color/transparent"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@mipmap/close"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_15sdp"
            android:contentDescription="@string/todo"
            android:layout_marginRight="@dimen/_15sdp" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/_FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_110sdp"
        android:padding="@dimen/_15sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/_FFFFFF">

            <com.asksira.bsimagepicker.cTextView
                android:id="@+id/allPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/_allPhoto"
                android:textSize="@dimen/_20ssp"
                android:fontFamily="@font/cabin_semibold"
                android:textColor="@color/_000000" />

            <ImageView
                android:id="@+id/downIcon"
                android:layout_width="@dimen/_13sdp"
                android:layout_height="@dimen/_13sdp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_toEndOf="@+id/allPhoto"
                android:contentDescription="@string/todo"
                android:src="@mipmap/down_arrow"
                android:layout_toRightOf="@+id/allPhoto"
                android:layout_marginLeft="@dimen/_5sdp" />

            <com.asksira.bsimagepicker.cTextView
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_alignParentRight="true"
                android:text="@string/next"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/sourcesanspro_bold"
                android:textColor="@color/_FF8500"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <com.asksira.bsimagepicker.cTextView
            android:id="@+id/choosePhotoTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/_choosePhotoTxt"
            android:textSize="@dimen/_14ssp"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:textColor="@color/_000000" />

        <com.asksira.bsimagepicker.cTextView
            android:id="@+id/minimumPhotoTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/_minimumPhotoTxt"
            android:textSize="@dimen/_10ssp"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:textColor="@color/_000000" />

    </LinearLayout>
<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_marginLeft="20dp"-->
<!--        android:layout_marginRight="20dp"-->
<!--        android:layout_height="1dp"-->
<!--        android:background="#F4F4F6"/>-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/picker_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_margin="@dimen/_10sdp"/>

<!--    <TextView-->
<!--        android:id="@+id/tv_picker_empty_view"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:minHeight="160dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:gravity="center"-->
<!--        android:padding="16dp"-->
<!--        android:text="@string/imagepicker_no_image_text_view"-->
<!--        android:textSize="14sp"-->
<!--        android:visibility="invisible"/>-->

</LinearLayout>